# address-standardizer-wasm-pagc

./: .gitignore  COPYING.PAGC  Cargo.toml  README.md  build.rs
scripts/: build.sh
src/: bindings.rs  ffi.rs  lib.rs  ops.rs  wit.rs
src/pagc/: analyze.c  gamma.c  khash.h  parseaddress-api.c  postgres.h  standard.c  wasm_loader.c  wasm_parser.c
tests/: corpus.csv  parity.rs
wit/: world.wit
