[package]
name = "address-standardizer-wasm-pagc"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "US address standardization as a WebAssembly component (PAGC C engine vendored via wasi-sdk)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

[target.'cfg(target_family = "wasm")'.dependencies]
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }

[build-dependencies]
cc = "1.2"
pkg-config = "0.3"

[package.metadata.component]
package = "tegmentum:address-standardizer-pagc"

[package.metadata.component.target]
path = "wit"
world = "address-standardizer-component"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
